--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -27,6 +27,7 @@
 - PyO3/maturin-action@*
 - TobKed/label-when-approved-action@*
 - VirtusLab/scala-cli-setup@ef3764b372549ee60cce795f98da0df46e2567ff
+- VirtusLab/scala-cli-setup@6fc878be89f1990f6599f4f6a2e52a252e54d9f9
 - actions-cool/check-user-permission@*
 - actions-cool/issues-helper@*
 - actions-cool/maintain-one-comment@*
@@ -150,6 +151,7 @@
 - leafo/gh-actions-luarocks@e65774a6386cb4f24e293dca7fc4ff89165b64c5
 - ludeeus/action-shellcheck@1.1.0
 - ludeeus/action-shellcheck@94e0aab03ca135d11a35e5bfc14e6746dc56e7e9
+- manusa/actions-setup-minikube@b589f2d61bf96695c546929c72b38563e856059d
 - manusa/actions-setup-minikube@*
 - marcospereira/action-surefire-report@*
 - maxim-lobanov/setup-xcode@*
@@ -203,8 +205,10 @@
 - readthedocs/actions@*
 - release-drafter/release-drafter@*
 - ruby/setup-ruby@*
+- sbt/setup-sbt@26ab4b0fa1c47fa62fc1f6e51823a658fb6c760c
 - sbt/setup-sbt@*
 - scacap/action-surefire-report@*
+- scala-steward-org/scala-steward-action@5021652c555c5724af574758b78ea5be49640007
 - scala-steward-org/scala-steward-action@*
 - scalacenter/sbt-dependency-submission@*
 - scottbrenner/puppet-lint-action@*
