--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -159,6 +159,8 @@
 - mikepenz/action-junit-report@*
 - mozilla-actions/sccache-action@2e7f9ec7921547d4b46598398ca573513895d0bd
 - mozilla-actions/sccache-action@v0.0.4
+- mozilla-actions/sccache-action@7d986dd989559c6ecdb630a3fd2557667be217ad
+- mozilla-actions/sccache-action@v0.0.9
 - msys2/setup-msys2@*
 - mukunku/tag-exists-action@bdad1eaa119ce71b150b952c97351c75025c06a9
 - mukunku/tag-exists-action@v1.6.0
