--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -26,7 +26,7 @@
 - Madrapps/jacoco-report@fd4800e8a81e21bdf373438e5918b975df041d15
 - PyO3/maturin-action@*
 - TobKed/label-when-approved-action@*
-- VirtusLab/scala-cli-setup@ef3764b372549ee60cce795f98da0df46e2567ff
+- VirtusLab/scala-cli-setup@ca54569bf13a29cd648721038a89c47c7921c060
 - VirtusLab/scala-cli-setup@6fc878be89f1990f6599f4f6a2e52a252e54d9f9
 - actions-cool/check-user-permission@*
 - actions-cool/issues-helper@*
@@ -73,7 +73,9 @@
 - conda-incubator/setup-miniconda@*
 - container-tools/kind-action@*
 - container-tools/microshift-action@*
+- coursier/cache-action@4e2615869d13561d626ed48655e1a39e5b192b3c
 - coursier/cache-action@*
+- coursier/setup-action@039f736548afa5411c1382f40a5bd9c2d30e0383
 - coursier/setup-action@*
 - cpp-linter/cpp-linter-action@e3fcb174b19d50de4eae1b46896698a1dd48b094
 - cpp-linter/cpp-linter-action@v2.13.3
@@ -133,6 +135,7 @@
 - jasonetco/create-an-issue@v2
 - jidicula/clang-format-action@*
 - jlumbroso/free-disk-space@*
+- jrouly/scalafmt-native-action@14620cde093e5ff6bfbbecd4f638370024287b9d
 - jrouly/scalafmt-native-action@*
 - julia-actions/julia-buildpkg@*
 - julia-actions/julia-docdeploy@*
