--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -121,6 +121,7 @@ jobs:
       - uses: pypa/cibuildwheel@v2.12.0
       - uses: sbt/setup-sbt@26ab4b0fa1c47fa62fc1f6e51823a658fb6c760c
       - uses: scala-steward-org/scala-steward-action@5021652c555c5724af574758b78ea5be49640007
+      - uses: scalacenter/sbt-dependency-submission@64084844d2b0a9b6c3765f33acde2fbe3f5ae7d3
       - uses: seanmiddleditch/gha-setup-ninja@8b297075da4cd2a5f1fd21fe011b499edf06e9d2
       - uses: seanmiddleditch/gha-setup-ninja@v4
       - uses: snok/install-poetry@76e04a911780d5b312d89783f7b1cd627778900a
