--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -214,6 +214,7 @@
 - scacap/action-surefire-report@*
 - scala-steward-org/scala-steward-action@5021652c555c5724af574758b78ea5be49640007
 - scala-steward-org/scala-steward-action@*
+- scalacenter/sbt-dependency-submission@64084844d2b0a9b6c3765f33acde2fbe3f5ae7d3
 - scalacenter/sbt-dependency-submission@*
 - scottbrenner/puppet-lint-action@*
 - seanmiddleditch/gha-setup-ninja@8b297075da4cd2a5f1fd21fe011b499edf06e9d2
