--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -120,6 +120,7 @@ jobs:
       - uses: pypa/cibuildwheel@0f04e96e2f58e63b8b03886c1db16a507f2199bf
       - uses: pypa/cibuildwheel@v2.12.0
       - uses: sbt/setup-sbt@26ab4b0fa1c47fa62fc1f6e51823a658fb6c760c
+      - uses: scacap/action-surefire-report@1a128e49c0585bc0b8e38e541ac3b6e35a5bc727
       - uses: scala-steward-org/scala-steward-action@5021652c555c5724af574758b78ea5be49640007
       - uses: scalacenter/sbt-dependency-submission@64084844d2b0a9b6c3765f33acde2fbe3f5ae7d3
       - uses: seanmiddleditch/gha-setup-ninja@8b297075da4cd2a5f1fd21fe011b499edf06e9d2
