--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -211,6 +211,7 @@
 - ruby/setup-ruby@*
 - sbt/setup-sbt@26ab4b0fa1c47fa62fc1f6e51823a658fb6c760c
 - sbt/setup-sbt@*
+- scacap/action-surefire-report@1a128e49c0585bc0b8e38e541ac3b6e35a5bc727
 - scacap/action-surefire-report@*
 - scala-steward-org/scala-steward-action@5021652c555c5724af574758b78ea5be49640007
 - scala-steward-org/scala-steward-action@*
