--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -39,6 +39,8 @@ jobs:
       - uses: browser-actions/setup-geckodriver@5ef1526ed36211ab6cb531ec1cfb11f924ca2dee
       - uses: burnett01/rsync-deployments@0dc935cdecc5f5e571865e60d2a6cdc673704823
       - uses: burnett01/rsync-deployments@5.2
+      - uses: carloscastrojumo/github-cherry-pick-action@a145da1b8142e752d3cbc11aaaa46a535690f0c5
+      - uses: carloscastrojumo/github-cherry-pick-action@v1.0.9
       - uses: carloscastrojumo/github-cherry-pick-action@503773289f4a459069c832dc628826685b75b4b3
       - uses: carloscastrojumo/github-cherry-pick-action@v1.0.10
       - uses: commit-check/commit-check-action@8d507e12899a9feb405c3ed546252ff9508724e0
@@ -56,11 +58,6 @@ jobs:
       - uses: docker://jekyll/jekyll@*
       - uses: dominikh/staticcheck-action@4ec9a0dff54be2642bc76581598ba433fd8d4967
       - uses: dominikh/staticcheck-action@v1.1.0
-      - uses: dorny/paths-filter@0bc4621a3135347011ad047f9ecf449bf72ce2bd
-      - uses: dorny/paths-filter@v3.0.0
-      - uses: dorny/paths-filter@ebc4d7e9ebcb0b1eb21480bb8f43113e996ac77a
-      - uses: dorny/paths-filter@v3.0.1
-      - uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36
       - uses: dorny/paths-filter@v3.0.2
       - uses: google-github-actions/setup-gcloud@77e7a554d41e2ee56fc945c52dfd3f33d12def9a
       - uses: graalvm/setup-graalvm@01ed653ac833fe80569f1ef9f25585ba2811baab
