gateway: migrate to ruyaml
in preparation of supporting tag comments

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install pyaml pytest
+          pip install pyaml pytest ruyaml
 
       - name: Run tests
         run: |
