trigger workflow on changes to gateway files

--- a/.github/workflows/update_actions.yml
+++ b/.github/workflows/update_actions.yml
@@ -10,6 +10,7 @@ on:
     paths:
       - ".github/workflows/update_actions.yml"
       - ".github/workflows/dummy.yml"
+      - gateway/*
 
 permissions:
   contents: read
