--- a/.github/workflows/update_actions.yml
+++ b/.github/workflows/update_actions.yml
@@ -10,6 +10,7 @@ on:
     paths:
       - ".github/workflows/update_actions.yml"
       - ".github/workflows/dummy.yml"
+      - gateway/*
 
 permissions:
   contents: read
@@ -28,8 +29,10 @@ jobs:
         with:
           persist-credentials: true
 
+      - run: pip install ruyaml 
+
       - name: Update actions.yml
-        shell: python
+        shell: python 
         run: |
           import sys
           sys.path.append("./gateway/")
