--- a/actions.yml
+++ b/actions.yml
@@ -5,10 +5,13 @@
 # Versions that are known to be problematic should be removed explicitly manually.
 1Password/load-secrets-action:
   581a835fb51b8e7ec56b71cf2ffddd7e68bb25e0:
-    expires_at: 2025-08-01
+    expires_at: 2050-01-01
 ana06/get-changed-files:
   v2.3.0:
     expires_at: 2025-08-01
+  25f79e676e7ea1868813e21465014798211fad8c:
+    tag: v2.3.0
+    expires_at: 2050-01-01
 actions-rs/*:
   '*':
     expires_at: 2025-08-01
@@ -102,9 +105,11 @@ TobKed/label-when-approved-action:
     expires_at: 2025-08-01
     keep: true
 VirtusLab/scala-cli-setup:
-  ca54569bf13a29cd648721038a89c47c7921c060:
-    expires_at: 2050-01-01
   6fc878be89f1990f6599f4f6a2e52a252e54d9f9:
+    tag: v1.7.1
+    expires_at: 2025-09-08
+  ca54569bf13a29cd648721038a89c47c7921c060:
+    tag: v1.8.0
     expires_at: 2050-01-01
 actions-cool/check-user-permission:
   '*':
@@ -215,13 +220,12 @@ carloscastrojumo/github-cherry-pick-action:
   v1.0.9:
     expires_at: 2025-08-01
   a145da1b8142e752d3cbc11aaaa46a535690f0c5:
-    expires_at: 2025-08-25
+    expires_at: 2025-08-01
     tag: v1.0.9
   v1.0.10:
     expires_at: 2025-08-01
   503773289f4a459069c832dc628826685b75b4b3:
-    expires_at: 2025-08-25
-    keep: false
+    expires_at: 2050-01-01
     tag: v1.0.10
 carlosperate/arm-none-eabi-gcc-action:
   '*':
@@ -273,12 +277,14 @@ container-tools/microshift-action:
 coursier/cache-action:
   4e2615869d13561d626ed48655e1a39e5b192b3c:
     expires_at: 2050-01-01
+    tag: 6.4.7
   '*':
     expires_at: 2025-08-01
     keep: true
 coursier/setup-action:
   039f736548afa5411c1382f40a5bd9c2d30e0383:
     expires_at: 2050-01-01
+    tag: v1.3.9
   '*':
     expires_at: 2025-08-01
     keep: true
@@ -351,7 +357,7 @@ dorny/paths-filter:
   v3.0.2:
     expires_at: 2025-08-01
   de90cc6fb38fc0963ad72b210f1f284cd68cea36:
-    expires_at: 2025-06-24
+    expires_at: 2050-01-01
     keep: false
     tag: v3.0.2
 easimon/maximize-build-space:
@@ -397,11 +403,13 @@ graalvm/setup-graalvm:
     tag: v1
 gradle/wrapper-validation-action:
   '*':
-    expires_at: 2025-08-01
+    expires_at: 2050-01-01
     keep: true
-    tag: v3.5.0
   v3.5.0:
     expires_at: 2025-08-01
+  f9c9c575b8b21b6485636a91ffecd10e558c62f6:
+    tag: v3.5.0
+    expires_at: 2050-01-01
 gsactions/commit-message-checker:
   '*':
     expires_at: 2025-08-01
@@ -433,8 +441,7 @@ helm/chart-testing-action:
   v2.7.0:
     expires_at: 2025-08-01
   0d28d3144d3a25ea2cc349d6e59901c4ff469b3b:
-    expires_at: 2025-07-17
-    keep: false
+    expires_at: 2050-01-01
     tag: v2.7.0
 helm/kind-action:
   v1.10.0:
@@ -477,6 +484,7 @@ jlumbroso/free-disk-space:
 jrouly/scalafmt-native-action:
   14620cde093e5ff6bfbbecd4f638370024287b9d:
     expires_at: 2050-01-01
+    tag: v4
   '*':
     expires_at: 2025-08-01
     keep: true
@@ -545,6 +553,7 @@ ludeeus/action-shellcheck:
 manusa/actions-setup-minikube:
   b589f2d61bf96695c546929c72b38563e856059d:
     expires_at: 2050-01-01
+    tag: v2.14.0
   '*':
     expires_at: 2025-08-01
     keep: true
@@ -569,8 +578,7 @@ mozilla-actions/sccache-action:
   v0.0.9:
     expires_at: 2025-08-01
   7d986dd989559c6ecdb630a3fd2557667be217ad:
-    expires_at: 2025-08-03
-    keep: false
+    expires_at: 2050-01-01
     tag: v0.0.9
 msys2/setup-msys2:
   '*':
@@ -734,24 +742,28 @@ ruby/setup-ruby:
 sbt/setup-sbt:
   26ab4b0fa1c47fa62fc1f6e51823a658fb6c760c:
     expires_at: 2050-01-01
+    tag: v1.1.7
   '*':
     expires_at: 2025-08-01
     keep: true
 scacap/action-surefire-report:
   1a128e49c0585bc0b8e38e541ac3b6e35a5bc727:
     expires_at: 2050-01-01
+    tag: v1.9.0
   '*':
     expires_at: 2025-08-01
     keep: true
 scala-steward-org/scala-steward-action:
   5021652c555c5724af574758b78ea5be49640007:
     expires_at: 2050-01-01
+    tag: v2.75.0
   '*':
     expires_at: 2025-08-01
     keep: true
 scalacenter/sbt-dependency-submission:
   64084844d2b0a9b6c3765f33acde2fbe3f5ae7d3:
     expires_at: 2050-01-01
+    tag: v3.0.2
   '*':
     expires_at: 2025-08-01
     keep: true
@@ -853,7 +865,7 @@ slackapi/slack-github-action:
   v2.0.0:
     expires_at: 2025-08-01
   485a9d42d3a73031f12ec201c457e2162c45d02d:
-    expires_at: 2025-08-01
+    expires_at: 2050-01-01
     tag: v2.0.0
 golangci/golangci-lint-action:
   1481404843c368bc19ca9406f87d6e0fc97bdcfd:
