--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -200,6 +200,7 @@
 - phoenix-actions/test-reporting@v15
 - phoenix-actions/test-reporting@f957cd93fc2d848d556fa0d03c57bc79127b6b5e
 - pmd/pmd-github-action@967a81f8b657c87f7c3e96b62301cb1a48efef29
+- pmd/pmd-github-action@d9c1f3c5940cbf5923f1354e83fa858b4496ebaa
 - pnpm/action-setup@*
 - potiuk/cancel-workflow-runs@*
 - pre-commit/action@v3.0.1
