remove redundant bump scope

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,7 +18,7 @@ version: 2
 updates:
   - package-ecosystem: "github-actions"
     commit-message:
-      prefix: "gateway(bump)"
+      prefix: "gateway"
     directories:
       - "/"
       - "/pelican/"
