--- a/actions.yml
+++ b/actions.yml
@@ -316,10 +316,14 @@ dawidd6/action-download-artifact:
     keep: true
 dawidd6/action-send-mail:
   v3:
-    expires_at: 2025-08-01
+    expires_at: 2025-09-02
   4226df7daafa6fc901a43789c49bf7ab309066e7:
-    expires_at: 2050-01-01
+    expires_at: 2025-09-02
     tag: v3
+  2cea9617b09d79a095af21254fbcb7ae95903dde:
+    expires_at: 2050-01-01
+    keep: false
+    tag: v3.12.0
 delaguardo/setup-graalvm:
   '*':
     expires_at: 2025-08-01
