Update actions.yml and approved_actions.yml based on .github/workflows/dummy.yml
Generated by .github/workflows/update_actions.yml

--- a/actions.yml
+++ b/actions.yml
@@ -261,7 +261,11 @@ codspeedhq/action:
     keep: true
 commit-check/commit-check-action:
   8d507e12899a9feb405c3ed546252ff9508724e0:
+    expires_at: 2025-09-03
+  f09ba795622b9cb0d0d5e668926235a1d893c7a4:
     expires_at: 2050-01-01
+    keep: false
+    tag: v0.8.0
 conda-incubator/setup-miniconda:
   '*':
     expires_at: 2025-08-01
