--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -73,6 +73,7 @@
 - codelytv/pr-size-labeler@*
 - codspeedhq/action@*
 - commit-check/commit-check-action@8d507e12899a9feb405c3ed546252ff9508724e0
+- commit-check/commit-check-action@f09ba795622b9cb0d0d5e668926235a1d893c7a4
 - conda-incubator/setup-miniconda@*
 - container-tools/kind-action@*
 - container-tools/microshift-action@*
