fix: install ruyaml when removing expired actions
similar to #170

--- a/.github/workflows/remove_expired.yml
+++ b/.github/workflows/remove_expired.yml
@@ -22,6 +22,8 @@ jobs:
           # Use PAT so the commit triggers other actions
           token: ${{ secrets.ALLOWLIST_WORKFLOW_TOKEN || github.token }}
 
+      - run: pip install ruyaml
+
       - name: Clean actions.yml
         shell: python
         run: |
