Update actions.yml and approved_actions.yml based on .github/workflows/dummy.yml
Generated by .github/workflows/update_actions.yml

--- a/actions.yml
+++ b/actions.yml
@@ -295,8 +295,11 @@ cpp-linter/cpp-linter-action:
   v2.13.3:
     expires_at: 2025-08-01
   e3fcb174b19d50de4eae1b46896698a1dd48b094:
-    expires_at: 2050-01-01
+    expires_at: 2025-09-04
     tag: v2.13.3
+  f91c446a32ae3eb9f98fef8c9ed4c7cb613a4f8a:
+    expires_at: 2050-01-01
+    tag: v2.15.0
 crate-ci/typos:
   '*':
     expires_at: 2025-08-01
