--- a/actions.yml
+++ b/actions.yml
@@ -455,8 +455,11 @@ helm/kind-action:
   v1.10.0:
     expires_at: 2025-08-01
   0025e74a8c7512023d06dc019c617aa3cf561fde:
-    expires_at: 2050-01-01
+    expires_at: 2025-09-08
     tag: v1.10.0
+  a1b0e391336a6ee6713a0583f8c6240d70863de3:
+    expires_at: 2050-01-01
+    tag: v1.12.0
 houseabsolute/actions-rust-cross:
   '*':
     expires_at: 2025-08-01
