--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -133,6 +133,7 @@
 - helm/chart-testing-action@0d28d3144d3a25ea2cc349d6e59901c4ff469b3b
 - helm/kind-action@v1.10.0
 - helm/kind-action@0025e74a8c7512023d06dc019c617aa3cf561fde
+- helm/kind-action@a1b0e391336a6ee6713a0583f8c6240d70863de3
 - houseabsolute/actions-rust-cross@*
 - ilammy/msvc-dev-cmd@*
 - ilammy/setup-nasm@v1
