--- a/actions.yml
+++ b/actions.yml
@@ -127,8 +127,11 @@ actions/setup-go:
   v5:
     expires_at: 2025-08-01
   0aaccfd150d50ccaeb58ebd88d36e91967a5f35b:
-    expires_at: 2050-01-01
+    expires_at: 2025-09-08
     tag: v5
+  d35c59abb061a4a6fb18e82ac0862c26744d6ab5:
+    expires_at: 2050-01-01
+    tag: v5.5.0
 addnab/docker-run-action:
   v3:
     expires_at: 2025-08-01
