--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -34,6 +34,7 @@
 - actions-cool/maintain-one-comment@*
 - actions/setup-go@v5
 - actions/setup-go@0aaccfd150d50ccaeb58ebd88d36e91967a5f35b
+- actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5
 - addnab/docker-run-action@v3
 - addnab/docker-run-action@4f65fabd2431ebc8d299f8e5a018d79a769ae185
 - al-cheb/configure-pagefile-action@*
